Fix spacing in pagination elements

--- a/_sass/components/_pagination.scss
+++ b/_sass/components/_pagination.scss
@@ -6,6 +6,10 @@
 
   a {
     text-decoration: none;
+    word-break: break-all;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
   }
 
   svg {
@@ -15,10 +19,12 @@
 
   &__prev {
     flex-grow: 1;
+    margin-right: 1em;
   }
 
   &__next {
     flex-grow: 1;
     text-align: right;
+    margin-left: 1em;
   }
 }
